force-app/main/default/objects/Donation__c/Donation__c.object-meta.xml
<CustomObject>
    <description>Keeps records of donations received.</description>
    <label>Donation</label>
    <nameField>
        <displayFormat>DN-{0000}</displayFormat>
        <label>Donations Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Donations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>