force-app/main/default/objects/Donation__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Contact information for the person who offered a donation.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Donations</relationshipLabel>
    <relationshipName>Donations</relationshipName>
    <type>Lookup</type>
</CustomField>